tdf#84399 VML import: map <v:shape o:spt="202"> to TextShape

This partially reverts commit 81f9fe3a14f0fc99afbfa7ce3a26a9c7855d0919
(fdo#74401 VML groupshape import: only handle v:rect as TextShape,
2014-03-19), which wanted to map triangles to custom shapes.

It was overlooked that we can have not only explicit rectangles and
custom shapes, but also <v:shape> elements which have their shape type
explicitly set to TextBox. The later is now again handled similar to
rectangles. This keeps the triangle case working, but fixes the <v:shape
o:spt="202"> case.

We need to make this decision while parsing the XML, so some rework is
needed to have earlier access to its container (group shape or draw
page) and also to its shape type.

Change-Id: I33a4b3cd03b0df5d93cffa19e7ea834113df2bdc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89852
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>